# PCL_Demo

./: CMakeLists.txt  main.cpp
document/: 20241029_cmake.md  20241029_filter.md
include/: extract_indices.h  pass.h  project_inliers.h  remove_outliers.h  statistical_removal.h  voxelgrid.h
src/: extract_indices.cpp  pass.cpp  project_inliers.cpp  remove_outliers.cpp  statistical_removal.cpp  voxelgrid.cpp
